Add ngrx store and effects.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.2",
     "@ng-bootstrap/ng-bootstrap": "^19.0.0-rc.0",
+    "@ngrx/effects": "^20.0.0",
+    "@ngrx/store": "^20.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
