--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@ngrx/effects": "^20.0.0",
     "@ngrx/store": "^20.0.0",
     "@popperjs/core": "^2.11.8",
+    "apollo-angular": "^11.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^16"
   },
   "devDependencies": {
     "@angular/build": "^20.0.2",
