--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:doppelkopf-ui": "node dist/doppelkopf-ui/server/server.mjs"
+    "serve:ssr:doppelkopf-ui": "node dist/doppelkopf-ui/server/server.mjs",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +20,8 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.2",
+    "@apollo/client": "^3.0.0",
+    "@graphql-tools/webpack-loader": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^19.0.0-rc.0",
     "@ngrx/effects": "^20.0.0",
     "@ngrx/store": "^20.0.0",
@@ -28,24 +31,27 @@
     "bootstrap-icons": "^1.13.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.0.2",
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.0",
     "@angular/localize": "^20.0.0",
+    "@graphql-codegen/cli": "5.0.7",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "@graphql-codegen/typescript-apollo-angular": "4.0.1",
+    "@graphql-codegen/introspection": "4.0.3"
   }
 }
